# frida-orchestrator

./: .gitignore  README.md
docs/: adb_cheatsheet.md  architecture.md  frida_cheatsheet.md  modules.md  roadmap.md
frida_orchestrator/: pyproject.toml  requirements.txt
frida_orchestrator/src/frida_orchestrator/core/: profiler.py
src/frida_orchestrator/: main.py
src/frida_orchestrator/cli/: commands.py
src/frida_orchestrator/core/: device_manager.py  frida_manager.py
